data/all_generated_tests/raw_wast_tests/if_StackCorruption_1403.wast
;; Implement an `if` instruction without a block type and force exhausting the operand stack within `then` and `else` blocks. This will test the consistency of stack height enforcement and context validation during control flow.

(assert_invalid
  (module (func
    (if (i32.const 0) 
      (then (drop) (drop)) 
      (else (drop) (drop))
    )
  ))
  "stack underflow"
)